# rock

./: CMakeLists.txt
include/comm/: comm.h
include/share/: CMemoryT.h  CQueueT.h  type.h
rock/: main.cpp
src/comm/: CCommEnv.h  CCommInst.h  CCommSrv.hpp  CCommSrvMgr.h  TCommMessage.h  comm.cpp  comm_global.cpp
test/comm/: test_comm.cpp
